Remove unnecessary fields and use game's ones, add fields for vulkanmod.options.deviceSelector.tooltip and vulkanmod.options.ao.subBlock.tooltip, add dynamic margin for SwitchOptionWidget